Fixed spacing around album lists in song rows

--- a/rhyme/static/rhyme/style/songs.less
+++ b/rhyme/static/rhyme/style/songs.less
@@ -15,6 +15,10 @@
             border-bottom: 1px solid @greyLightest;
             vertical-align: middle;
 
+            ul {
+                margin-bottom: 0;
+            }
+
             a {
                 color: @defaultFontColor;
             }
